--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <link rel="icon" type="image/svg+xml" href="/ticket.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>M-Events</title>
+    <title>EventHub</title>
   </head>
   <body>
     <div id="root"></div>
